[FAL-326]- Alignment and label fix

--- a/src/app/pages/manage-my-templates/manage-my-templates.component.scss
+++ b/src/app/pages/manage-my-templates/manage-my-templates.component.scss
@@ -34,7 +34,7 @@ table {
 .mat-cell.mat-column-createdDate{
   flex: 0 0 8%;
   width: 8%;
-  text-align: center;
+  text-align: left;
 }
 .mat-column-name{
   flex: 0 0 30%;
